fix forge mixin compatibility level