@@ -630,7 +630,7 @@ public class ForgeConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfi
             if (count > currentPath.size())
                 throw new IllegalArgumentException("Attempted to pop " + count + " elements when we only had: " + currentPath);
             for (int x = 0; x < count; x++)
-                currentPath.remove(currentPath.size() - 1);
+                currentPath.removeLast();
             return this;
         }
 
@@ -642,10 +642,14 @@ public class ForgeConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfi
         public ForgeConfigSpec build() {
             context.ensureEmpty();
             Config valueCfg = Config.of(Config.getDefaultMapCreator(true, true), InMemoryFormat.withSupport(ConfigValue.class::isAssignableFrom));
-            values.forEach(v -> valueCfg.set(v.getPath(), v));
+            for (ConfigValue<?> value : values) {
+                valueCfg.set(value.getPath(), value);
+            }
 
             ForgeConfigSpec ret = new ForgeConfigSpec(storage, valueCfg, levelComments, levelTranslationKeys);
-            values.forEach(v -> v.spec = ret);
+            for (ConfigValue<?> v : values) {
+                v.spec = ret;
+            }
             return ret;
         }
 
@@ -669,6 +673,7 @@ public class ForgeConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfi
 
         public void clearComment() { comment.clear(); }
         public boolean hasComment() { return !this.comment.isEmpty(); }
+        @SuppressWarnings("unused")
         public String buildComment() { return buildComment(List.of("unknown", "unknown")); }
         public String buildComment(final List<String> path) {
             if (comment.stream().allMatch(String::isBlank)) {
